<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="900dp"
    android:layout_height="480dp"
    android:background="@color/layer3"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:text="@string/force_question"
        android:textColor="@color/text_color"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/text_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text="@string/questions"
            android:textColor="@color/text_color"
            android:textSize="24sp" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/text_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/extra"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/numbers_buttons"
            android:text="@string/extra"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="17sp" />

        <Button
            android:id="@+id/no"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/numbers_buttons"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="17sp" />

        <Button
            android:id="@+id/little"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/numbers_buttons"
            android:text="@string/little"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="17sp" />

        <Button
            android:id="@+id/half"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/numbers_buttons"
            android:text="@string/half"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="17sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/text_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="horizontal"
        android:gravity="center">

       <GridView
           android:id="@+id/questions"
           android:layout_width="0dp"
           android:layout_height="200dp"
           android:gravity="center"
           android:layout_weight="1"
           android:paddingHorizontal="20dp"
           android:horizontalSpacing="10dp"
           android:verticalSpacing="10dp"
           android:numColumns="2">

       </GridView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingHorizontal="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/answers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/answer"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/text_color"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/previous"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/dark_blue"
            android:text="@string/previous"
            android:textAllCaps="false"
            android:textColor="@color/layer1"
            android:textSize="17sp" />

        <Button
            android:id="@+id/save"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/layer1"
            android:textSize="17sp" />

        <Button
            android:id="@+id/exit"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/exit"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textColor="@color/layer1"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>