<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layer3"
    android:orientation="vertical"
    android:padding="20dp">



        <TextView
            android:id="@+id/trans_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/pay_in"
            android:textColor="@color/text_color"
            android:textSize="28sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/text_color"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textColor="@color/text_color"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/trans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/transaction"
            android:textColor="@color/text_color"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:textColor="@color/text_color"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/value"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:padding="5dp"
            android:inputType="number"
            android:background="@color/layer1"
            android:textColor="@color/text_color"
            android:textSize="21sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/remark"
            android:textColor="@color/text_color"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:padding="5dp"
            android:background="@color/layer1"
            android:textColor="@color/text_color"
            android:textSize="21sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/layer1"
            android:textSize="17sp" />

        <Button
            android:id="@+id/exit"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/exit"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textColor="@color/layer1"
            android:textSize="17sp" />
    </LinearLayout>


</LinearLayout>