<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="400dp"
    android:background="@color/layer3"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:textSize="25sp" />


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:padding="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/table_number"
                android:textColor="@color/text_color"
                android:textSize="22sp" />


            <Spinner
                android:id="@+id/tableNo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingEnd="20sp"
                android:paddingRight="20dp"
                android:text="@string/menu_registration"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/b_done"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/done_buttons"
        android:text="@string/done"
        android:textColor="@color/text_color"
        android:textSize="17sp" />

</LinearLayout>