<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layer3"
    android:orientation="vertical"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="@string/category_name"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/cat_name"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="@string/family_name"
            android:textColor="@color/text_color"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/family_name"
                android:layout_width="310dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:paddingEnd="20sp"
                android:paddingRight="20dp"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/addFamily"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="9dp"
                android:background="@drawable/add" />

        </LinearLayout>
    </LinearLayout>

    <CheckBox
        android:id="@+id/showInMenu"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/show_in_menu"
        android:checked="true"
        android:textColor="@color/text_color" />

    <Button
        android:id="@+id/b_done"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@drawable/done_buttons"
        android:text="@string/done"
        android:textColor="@color/text_color"
        android:textSize="17sp" />

</LinearLayout>